# Reforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAILY_TASKS.md  LICENSE  OWNERSHIP.md  PRD.md  README.md  README.zh-CN.md  pyproject.toml  q1_report.md  reforge.bat  reforge.ps1  requirements.txt  sales.csv
.github/: dependabot.yml
.github/workflows/: test.yml
benchmark_data/: customers.csv  orders-2024.csv  orders.csv  orders_2024.csv  sales-2024.csv  transactions.db
docs/: ARCHITECTURE.md  EVOLUTION.md  KNOWN_LIMITATIONS.md  benchmark_robust_sample.md  benchmark_sample.md  eda_iris.md  eda_titanic.md  eda_wine.md  exp_p1_v0.md  exp_p1_v1.md  exp_v0_all_pairs.md  exp_v1_isolated.md  exp_v2_multiseed.md  experience_benchmark.md  hpo_iris_smoke.md  hpo_toy_bench.md  sql_toy_bench.md  sql_toy_smoke.md
docs/demo/: record.md
docs/eval/: EVALUATOR_CALIBRATION.md  PHASE0_CALIBRATION.md  PHASE0_CORPUS.md  PHASE0_METRICS.md  PHASE1_BIRD_ABLATION.md  PHASE1_BIRD_ABLATION_R2.md  PHASE1_BIRD_ABLATION_R3.md  PHASE1_CORPUS.md  phase1_records.jsonl  phase1_records_r2.jsonl  phase1_records_r3.jsonl
reforge/: config.py  helpers.py  paths.py
reforge/benchmark/: __init__.py  __main__.py  cases.py  experience_cases.py  experience_cli.py  experience_driver.py  experience_multiseed.py  experience_multiseed_reporter.py  experience_reporter.py  experience_substrate.py  models.py  reporter.py  runner.py
reforge/cli/: case_loader.py  events.py  formatter.py  main.py  mascot.py  progress.py  research.py
reforge/memory/: README.md  __init__.py  execution_memory.py  fingerprint.py  models.py  retrieval.py  sqlite_substrate.py  store.py  substrate.py  writer.py
reforge/observability/: llm_events.py
reforge/tests/: _consistency.py  _mcp_test_server.py  conftest.py  test_eda.py  (+118 more)
scripts/: calibrate_evaluator_heldout.py  gen_experience_fixtures.py  gen_sales_csv.py  prepare_bird.py  prepare_eda_datasets.py  prepare_hpo_toy.py  prepare_sql_dirty.py  prepare_sql_toy.py  smoke_experience.py  smoke_multiseed.py
(+225 files in other folders)
